# Chat

./: Audio.py  Dockerfile  Install.txt  Pass.py  app.py  changelog.html  chat.py  docker-compose.yaml  docker-compose.yml  example.db  fly.toml  games.html  index.html  list.csv  login.py  main.py  name.txt  pokemon-crystal.html  pokemon-silver.html  pyproject.toml  requirements.txt  smtp_server.py
.github/workflows/: cmake_x64.yml  python-app.yml
assets/css/: changelog.css  contentpage.css  discord.css  games.css  index.css  main.css  partners.css  slider.css
assets/js/: contentpage.js  discord.js  game.js  load.js  main.js
assets/js/changelog/: changelog.js  updatelog.js
assets/js/gads/: ggads.js  whitelisted.json
assets/js/games/: createfilters.js  filters.js  gamefilter.js  updategames.js
assets/js/partners/: partners.js
assets/js/slider/: updateslider.js
assets/js/testimonials/: testimonials.js
assets/slider/js/: slideritems.js
docker/: Dockerfile  requirements.txt
pages/: page01.py
pages /: music.py
src/modules/database/: database.py
